styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, sans-serif; /* Set a global font-family */
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(248, 231, 208);
}

.content-area {
    background-color: white;
    width: 50vw;
    margin: 5vh auto;
    border-radius: 1vw;
    padding: 2.5%;
}

.content-area > *:not(:last-child) {
    margin-bottom: 40px;
}

.content-area h1, h2, h3, h4, h5, h6 {
    margin-bottom: 20px;
}

#final-result {
    object-fit: contain;
    width: 100%;
    height: 100%;
    border-radius: 1vw;
}

h2 {
    font-size: 1.17rem;
}

h3 {
    font-size: 1.5rem;
}

li:not(:last-child) {
    margin-bottom: 15px; /* Adds spacing between list items except the last one */
}

.bold {
    font-weight: bold;
}

.prep-time {
    padding: 1.5vw;
    border-radius: 1vw;
    background-color: rgb(255, 238, 255);
}

.prep-time > h2 {
    color: rgb(139, 0, 139);
}

ul, ol {
    list-style-position: inside;

}

li::marker {
    color: brown;
}

ol>li::marker {
    margin: 5px;
}

